; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/glxx/extr_glxx_client.c_get_palette_size.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/glxx/extr_glxx_client.c_get_palette_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @get_palette_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_palette_size(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %15 [
    i32 135, label %5
    i32 133, label %6
    i32 137, label %7
    i32 134, label %8
    i32 136, label %9
    i32 130, label %10
    i32 128, label %11
    i32 132, label %12
    i32 129, label %13
    i32 131, label %14
  ]

5:                                                ; preds = %1
  store i32 48, i32* %2, align 4
  br label %17

6:                                                ; preds = %1
  store i32 64, i32* %2, align 4
  br label %17

7:                                                ; preds = %1
  store i32 32, i32* %2, align 4
  br label %17

8:                                                ; preds = %1
  store i32 32, i32* %2, align 4
  br label %17

9:                                                ; preds = %1
  store i32 32, i32* %2, align 4
  br label %17

10:                                               ; preds = %1
  store i32 768, i32* %2, align 4
  br label %17

11:                                               ; preds = %1
  store i32 1024, i32* %2, align 4
  br label %17

12:                                               ; preds = %1
  store i32 512, i32* %2, align 4
  br label %17

13:                                               ; preds = %1
  store i32 512, i32* %2, align 4
  br label %17

14:                                               ; preds = %1
  store i32 512, i32* %2, align 4
  br label %17

15:                                               ; preds = %1
  %16 = call i32 (...) @UNREACHABLE()
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @UNREACHABLE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
